package com.shneddy.dietdiary.activity;

import androidx.appcompat.app.AppCompatActivity;

import android.os.Bundle;

import com.shneddy.dietdiary.R;

public class EditorEntries extends AppCompatActivity {

    @Override
    protected void onCreate(Bundle savedInstanceState) {
        super.onCreate(savedInstanceState);
        setContentView(R.layout.activity_editor_entries);
    }
}
